Remove duplicated block